Fix chatbox contacts scrollbar goes outside in android device

--- a/src/app/core/pure-components/pure-chatbox/pure-chatbox.component.scss
+++ b/src/app/core/pure-components/pure-chatbox/pure-chatbox.component.scss
@@ -5,96 +5,98 @@
   right: 0px;
   bottom: 0px;
 
-  .chatbox-contacts {
-    position: relative;
-
-    .contact-item:first-child {
-      margin-top: 0px;
-    }
-
-    .contact-item-wrapper {
-      height: 64px;
+  .chatbox-contacts-wrapper {
+    .chatbox-contacts {
       position: relative;
 
-      .contact-item-selected {
-        position: absolute;
-        left: 0px;
-        right: 0px;
-        top: 0px;
-        bottom: 0px;
-        pointer-events: none;
-
-        .indicator {
-          position: absolute;
-          top: 14px;
-          bottom: 12px;
-          left: 0px;
-          width: 4px;
-          border-top-right-radius: 8px;
-          border-bottom-right-radius: 8px;
-        }
+      .contact-item:first-child {
+        margin-top: 0px;
       }
 
-      .contact-item {
-        position: relative;
-        width: 100%;
-        min-width: 64px;
-        max-width: 64px;
+      .contact-item-wrapper {
         height: 64px;
-        padding: 0px;
+        position: relative;
 
-        .contact-image {
-          width: 36px;
-          height: 36px;
-          border-radius: 20px;
-          box-sizing: border-box;
-          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .35);
+        .contact-item-selected {
+          position: absolute;
+          left: 0px;
+          right: 0px;
+          top: 0px;
+          bottom: 0px;
           pointer-events: none;
+
+          .indicator {
+            position: absolute;
+            top: 14px;
+            bottom: 12px;
+            left: 0px;
+            width: 4px;
+            border-top-right-radius: 8px;
+            border-bottom-right-radius: 8px;
+          }
         }
 
-        .contact-status {
-          position: absolute;
-          height: 9px;
-          width: 9px;
-          border-radius: 8px;
-          border: 2px solid;
-          right: 10px;
-          bottom: 11px;
-        }
+        .contact-item {
+          position: relative;
+          width: 100%;
+          min-width: 64px;
+          max-width: 64px;
+          height: 64px;
+          padding: 0px;
 
-        .online {
-          background: #00E676;
-        }
+          .contact-image {
+            width: 36px;
+            height: 36px;
+            border-radius: 20px;
+            box-sizing: border-box;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .35);
+            pointer-events: none;
+          }
 
-        .offline {
-          background: #E0E0E0;
-        }
+          .contact-status {
+            position: absolute;
+            height: 9px;
+            width: 9px;
+            border-radius: 8px;
+            border: 2px solid;
+            right: 10px;
+            bottom: 11px;
+          }
 
-        .busy {
-          background: #FFD600;
-        }
+          .online {
+            background: #00E676;
+          }
 
-        .do-not-disturb {
-          background: #F44336;
-        }
+          .offline {
+            background: #E0E0E0;
+          }
 
-        .contact-unread-count {
-          position: absolute;
-          padding: 0px 5px;
-          font-size: 11px;
-          font-weight: normal;
-          color: #fff;
-          top: 12px;
-          left: 10px;
-          line-height: 15px;
-          height: 15px;
-          min-width: 5px;
-          border-radius: 12px;
-          text-align: center;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .35)
+          .busy {
+            background: #FFD600;
+          }
+
+          .do-not-disturb {
+            background: #F44336;
+          }
+
+          .contact-unread-count {
+            position: absolute;
+            padding: 0px 5px;
+            font-size: 11px;
+            font-weight: normal;
+            color: #fff;
+            top: 12px;
+            left: 10px;
+            line-height: 15px;
+            height: 15px;
+            min-width: 5px;
+            border-radius: 12px;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .35)
+          }
         }
       }
     }
@@ -298,7 +300,7 @@
 * RTL SUPPORT
 */
 .pure-chatbox.RTL {
-  .chatbox-contacts>.contact-item-wrapper {
+  .chatbox-contacts-wrapper.chatbox-contacts>.contact-item-wrapper {
     .contact-item-selected>.indicator {
       left: unset;
       right: 0px;
